--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.android.volley:volley:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:23.1.1'
     implementation 'com.android.support:design:23.1.1'
